# mcp-server-minecraft-mod-devdoc

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_server.py
src/: __main__.py
src/mcp_server_minecraft_mod_devdoc/: __init__.py  main.py
src/mcp_server_minecraft_mod_devdoc/core/: __init__.py  provider.py  server.py
src/mcp_server_minecraft_mod_devdoc/providers/: __init__.py
src/mcp_server_minecraft_mod_devdoc/providers/fabric/: __init__.py
src/mcp_server_minecraft_mod_devdoc/providers/neoforge/: __init__.py  provider.py
