[project]
name = "mcp-server-minecraft-mod-devdoc"
version = "0.1.0"
description = "MCP Server for Minecraft Mod Documentation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.5.0",
    "aiohttp>=3.8.5",
    "asyncio>=3.4.3",
]

[project.scripts]
mcp-minecraft-docs = "src.__main__:main"
